<resources>
    <string name="app_name">陳升號</string>
    <string name="action_settings">Settings</string>

    <string name="double_exit_app">再按一下退出程序</string>
    <string name="network_abnormal_and_check">网络连接异常，请检查网络</string>
    <string name="login_info">陈升号信息服务平台</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_visitor">游客访问</string>
    <string name="login_btn">登陆</string>
    <string name="login_please_account">请输入账户</string>
    <string name="login_please_pwd">请输入密码</string>
    <string name="immediately_experience">立即体验</string>
</resources>
