<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/white_x">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/login_margin_size"
            android:layout_marginBottom="@dimen/login_margin_size"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/cspe_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_info"
                android:textSize="@dimen/once_title_size"
                android:textColor="@color/white_xxxx"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_xxxx"/>

        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/login_edit_height"
            android:layout_marginTop="@dimen/login_margin_size"
            android:drawableLeft="@mipmap/user_name"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:hint="@string/login_please_account"
            android:inputType="text"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/login_edit_content_padding"
            android:paddingBottom="@dimen/login_edit_content_padding"
            android:singleLine="true"
            android:textColorHint="@color/white_xxxx"
            android:textSize="@dimen/second_title_size" />

        <EditText
            android:id="@+id/login_user_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_height"
            android:layout_marginTop="@dimen/login_edit_padding"
            android:drawableLeft="@mipmap/user_pwd"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:hint="@string/login_please_pwd"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/login_edit_content_padding"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/login_edit_content_padding"
            android:singleLine="true"
            android:textColorHint="@color/white_xxxx"
            android:textSize="@dimen/second_title_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:padding="@dimen/login_edit_content_padding"
                android:text="@string/login_forget_pwd"
                android:textColor="@color/blue"
                android:textSize="@dimen/second_title_size"/>

            <TextView
                android:id="@+id/login_visitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:includeFontPadding="false"
                android:padding="@dimen/login_edit_content_padding"
                android:text="@string/login_visitor"
                android:textColor="@color/blue"
                android:textSize="@dimen/second_title_size"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/login_margin_size"
        android:background="@drawable/login_btn_selector"
        android:padding="@dimen/login_btn_padding"
        android:text="@string/login_btn"
        android:textSize="@dimen/once_title_size"
        android:textColor="@color/white" />

</RelativeLayout>
